test/should_not_compile/syntax_type_expression_row_label.sml
type t = { x : int
         , x : string
         };
